--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "livewire/livewire": "2.3",
         "spatie/laravel-permission": "^3.18",
         "yoeunes/toastr": "^1.2"
     },
